--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -84,6 +84,10 @@
                 android:value="androidx.startup"
                 tools:node="remove" />
             <meta-data
+                android:name="proton.android.authenticator.app.initializers.AccountStateHandlerInitializer"
+                android:value="androidx.startup"
+                tools:node="remove" />
+            <meta-data
                 android:name="proton.android.authenticator.app.initializers.BackupPeriodicWorkInitializer"
                 android:value="androidx.startup"
                 tools:node="remove" />
